test_suite/alan-2022-examples/failing/003860_mutation.alan
source P begin integer[T; relax end
